# Alphax-Annual-Leave-Engine

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
alphax_annual_leave_engine/: hooks.py  patches.txt
alphax_annual_leave_engine/alphax_annual_leave_engine/doctype/ale_leave_type/: ale_leave_type.json  ale_leave_type.py
alphax_annual_leave_engine/alphax_annual_leave_engine/doctype/ale_settings/: ale_settings.json  ale_settings.py
alphax_annual_leave_engine/overrides/: leave_application.py
fixtures/: custom_field.json
